force-app/main/default/objects/QB_Bill_PO__c/QB_Bill_PO__c.object-meta.xml
<CustomObject>
    <description>Bills and POs from your QuickBooks synced into Salesforce</description>
    <label>QB Bill / PO</label>
    <nameField>
        <label>QB_Bill / PO Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Bill / PO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>