force-app/main/default/objects/QB_Bill_PO__c/fields/QB_AP_Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>QB_AP_Account_Reference__c</fullName>
    <label>AP Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>