force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>QB_Balance_Due__c</fullName>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>