force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Bill_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_PO_Date__c</fullName>
    <label>Bill / PO Date</label>
    <type>Date</type>
</CustomField>