force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Bill_PO_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_PO_Id__c</fullName>
    <externalId>true</externalId>
    <label>Bill / PO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>