force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Created_in_QuickBooks_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Created_in_QuickBooks_Date__c</fullName>
    <label>Created in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>