force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Custom_Field_1_Value__c.field-meta.xml
<CustomField>
    <fullName>QB_Custom_Field_1_Value__c</fullName>
    <label>Custom Field 1 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>