force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>