force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Global_Tax_Calculation__c.field-meta.xml
<CustomField>
    <fullName>QB_Global_Tax_Calculation__c</fullName>
    <label>Global Tax Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>