force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Internal_Status__c</fullName>
    <label>Internal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>