force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Linked_Bill_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Linked_Bill_Id__c</fullName>
    <label>Linked Bill Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>