force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Location_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Location_Field_Name__c</fullName>
    <label>Location Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>