force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Mailing_City_Town__c.field-meta.xml
<CustomField>
    <fullName>QB_Mailing_City_Town__c</fullName>
    <label>Mailing City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>