force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>QB_Mailing_Country__c</fullName>
    <label>Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>