force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Mailing_Location__c.field-meta.xml
<CustomField>
    <fullName>QB_Mailing_Location__c</fullName>
    <label>Mailing Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>