force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Mailing_Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Mailing_Postal_Zip_Code__c</fullName>
    <label>Mailing Postal / Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>