force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Mailing_State_Region__c.field-meta.xml
<CustomField>
    <fullName>QB_Mailing_State_Region__c</fullName>
    <label>Mailing State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>