force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>QB_Mailing_Street_Address__c</fullName>
    <label>Mailing Street Address</label>
    <type>TextArea</type>
</CustomField>