force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Memo_PrivateNote__c.field-meta.xml
<CustomField>
    <fullName>QB_Memo_PrivateNote__c</fullName>
    <label>Memo</label>
    <type>TextArea</type>
</CustomField>