force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>QB_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>QB Bill / PO</relationshipLabel>
    <relationshipName>QB_Bill_PO</relationshipName>
    <type>Lookup</type>
</CustomField>