force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Purchase_Order_Status__c</fullName>
    <label>Purchase Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>