force-app/main/default/objects/QB_Bill_PO__c/fields/QB_See_this_Bill_PO_in_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>QB_See_this_Bill_PO_in_QuickBooks__c</fullName>
    <formula>HYPERLINK(
&quot;https://&quot;&amp;IF( CONTAINS(QB_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp;
CASE(
QB_Type__c,

&apos;Bill&apos;, &quot;bill?txnId=&quot;&amp;RIGHT(QB_Bill_PO_Id__c,(LEN(QB_Bill_PO_Id__c)-FIND(&apos;-Bill-&apos;, QB_Bill_PO_Id__c) - 5)),

&apos;Purchase Order&apos;,&quot;purchaseorder?txnId=&quot;&amp;RIGHT(QB_Bill_PO_Id__c,(LEN(QB_Bill_PO_Id__c)-FIND(&apos;-PO-&apos;, QB_Bill_PO_Id__c)- 3)),

&quot;vendorcredit?txnId=&quot;&amp;RIGHT(QB_Bill_PO_Id__c,(LEN(QB_Bill_PO_Id__c)-FIND(&apos;-VC-&apos;, QB_Bill_PO_Id__c)- 3))
),
&quot;Click Here&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See this Bill / PO in QuickBooks</label>
    <type>Text</type>
</CustomField>