force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Ship_to__c.field-meta.xml
<CustomField>
    <fullName>QB_Ship_to__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is using for PO to assign Shipping Customer.</description>
    <label>Ship to</label>
    <referenceTo>QB_Company__c</referenceTo>
    <relationshipLabel>Alternate Shipping Address for Bills and POs</relationshipLabel>
    <relationshipName>Bill_POs_Customer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>