force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Ship_via__c.field-meta.xml
<CustomField>
    <fullName>QB_Ship_via__c</fullName>
    <label>Ship via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>