force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Shipping_City_Town__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_City_Town__c</fullName>
    <label>Shipping City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>