force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_Location__c</fullName>
    <label>Shipping Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>