force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Shipping_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>QB_Shipping_Street_Address__c</fullName>
    <label>Shipping Street Address</label>
    <type>TextArea</type>
</CustomField>