force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Status__c</fullName>
    <formula>IF(
ISBLANK(QB_Internal_Status__c ),
CASE(
QB_Type__c,
&apos;Purchase Order&apos;, QB_Purchase_Order_Status__c,
&apos;Bill&apos;, IF( QB_Balance_Due__c&gt; 0,
IF(QB_Due_Date__c&lt;TODAY() ,&apos;Overdue&apos;,&apos;Open/Partial&apos;),
&apos;Paid&apos;
),
&apos;Vendor Credit&apos;, IF(QB_Balance_Due__c &gt; 0, &apos;Unapplied&apos;, &apos;Closed&apos;),
&apos;Invalid&apos;
),
QB_Internal_Status__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>