force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>QB_Status_Flag__c</fullName>
    <formula>IF(ISBLANK( QB_Internal_Status__c ),
IF(QB_Type__c = &apos;Bill&apos;,
IF(QB_Status__c = &apos;Paid&apos;,
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/bill_g.png&quot;, &quot;Paid&quot;, 20,20),
IF(QB_Status__c = &apos;Overdue&apos;,
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/bill_r.png&quot;, &quot;OverDue&quot;, 20,20),
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/bill_o.png&quot;, &quot;Open/Partial&quot;, 20,20)
)
),
IF(QB_Status__c=&apos;Closed&apos;,
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/po_g.png&quot;, &quot;Closed&quot;, 20,20),
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/po_o.png&quot;,&apos;Open&apos;, 20,20)
)
),
IF(QB_Internal_Status__c = &apos;Open/Partial&apos;,
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/yflag.png&quot;, &quot;Open/Partial&quot; , 20,20),
IF(OR(QB_Internal_Status__c = &apos;Received In Full&apos;,QB_Internal_Status__c = &apos;Closed&apos;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Paid&quot;, 20, 20),
IMAGE(&quot;https://s3.amazonaws.com/bw-cdn/X.png&quot;, &quot;Deleted / Voided&quot;, 20,20)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>