force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>QB_Sub_Total__c</fullName>
    <formula>QB_Total__c - QB_Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>