force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Terms__c.field-meta.xml
<CustomField>
    <fullName>QB_Terms__c</fullName>
    <label>Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>