force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Terms_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Terms_Ref__c</fullName>
    <label>Terms Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>