force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>QB_Total_Tax__c</fullName>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>