force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Type__c.field-meta.xml
<CustomField>
    <fullName>QB_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>