force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Vendor_Reference__c.field-meta.xml
<CustomField>
    <fullName>QB_Vendor_Reference__c</fullName>
    <label>Vendor Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>