force-app/main/default/objects/QB_Bill_PO__c/fields/QB_Your_message_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>QB_Your_message_to_Vendor__c</fullName>
    <label>Your message to Vendor</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>